# donor-reporting-portal-be

./: .dockerignore  .env_template  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGES  Dockerfile.prd  MANIFEST.in  Pipfile  README.md  README.rst  azure-pipelines.yml  manage.py  mkdocs.yaml  pyproject.toml  pytest.ini  ruff.toml  setup.py  tox.ini  user.json
.circleci/: config.yml
.github/: file-filters.yml
.github/workflows/: docs.yml  test.yml
docker/: Dockerfile  Dockerfile.base  Dockerfile.flat  Dockerfile.prd  Makefile  README.md  circus.conf  entrypoint.sh
docker/conf/: uwsgi.ini
docker/legacy/: Dockerfile.base  Dockerfile.old
docs/: GLOSSARY
docs/_scripts/: get_settings.py
docs/_theme/glossary/: definition.html  link.html  refs-list.html  refs-short.html  summary-detailed.html  summary-table.html  summary-un.html  summary.html
docs/_theme/js/: address.js
docs/_theme/overrides/: term.html
docs/src/: .pages  architecture.md  contributing.md  docker.md  index.md  process.md  settings.md  setup.md  sharepoint.md
docs/src/setup/: index.md
src/donor_reporting_portal/: __init__.py
src/donor_reporting_portal/api/: filters.py  permissions.py  urls.py
src/donor_reporting_portal/api/serializers/: fields.py  metadata.py  sharepoint.py  userrole.py  utils.py
src/donor_reporting_portal/api/views/: config.py  drp_properties.py  metadata.py  sharepoint.py  static.py  userrole.py  utils.py
src/donor_reporting_portal/apps/core/: admin.py  auth.py  backends.py  checks.py  mail.py  models.py  pipeline.py  urls.py
src/donor_reporting_portal/apps/core/fixtures/: groups.json  libraries.json  metadata.json
src/donor_reporting_portal/apps/core/migrations/: 0001_initial.py
src/donor_reporting_portal/apps/core/templatetags/: core.py
src/donor_reporting_portal/apps/init/: apps.py  checks.py
src/donor_reporting_portal/apps/init/fixtures/: groups.json  libraries.json  notifications.json
src/donor_reporting_portal/apps/report_metadata/: admin.py  models.py  synchronizers.py  tasks.py
src/donor_reporting_portal/apps/report_metadata/migrations/: 0001_initial.py  0002_auto_20190920_0330.py  0003_auto_20190920_0615.py  0004_auto_20191011_0804.py  0005_auto_20191014_0955.py  0006_donor_us_gov.py  0007_auto_20200205_1148.py  0008_secondarydonor.py  0009_donor_active.py  0010_drpmetadata.py  0011_grant_businessareas.py  0011_remove_grant_business_areas.py  0012_grant_business_areas.py  0013_auto_20220608_1003.py  0014_sourceid.py
src/donor_reporting_portal/apps/report_metadata/notifications/: notify_donor.py  notify_gavi.py  notify_urgent_gavi.py
src/donor_reporting_portal/apps/roles/: admin.py  apps.py  models.py  tasks.py
src/donor_reporting_portal/apps/roles/migrations/: 0001_initial.py  0002_auto_20190920_0339.py  0003_auto_20191007_1102.py  0004_auto_20200220_1101.py  0005_auto_20200302_1609.py  0006_userrole_notification_period.py  0007_alter_userrole_notification_period.py  0008_auto_20220128_1054.py  0009_auto_20220511_1724.py  0010_alter_userrole_secondary_donor.py  0011_alter_userrole_options.py
src/donor_reporting_portal/apps/roles/notifications/: access_grant_email.py
src/donor_reporting_portal/apps/sharepoint/: admin.py  apps.py  models.py
src/donor_reporting_portal/apps/sharepoint/migrations/: 0001_initial.py  0002_auto_20191105_0444.py  0003_auto_20191105_1127.py  (+8 more)
src/donor_reporting_portal/config/: celery.py  settings.py  urls.py  wsgi.py
src/donor_reporting_portal/config/fragments/: __init__.py  cache.py  celery.py  cors.py  drp.py  email.py  impersonate.py  insight.py  jwt.py  log.py  mail.py  matomo.py  rest.py  sentry.py  social_auth.py
src/donor_reporting_portal/data/: managed_properties.json
src/donor_reporting_portal/libraries/sharepoint/: camlquery_builder.py  client.py  file.py  qb.py  querystring_builder.py  serializers.py
src/donor_reporting_portal/libraries/unicef_security/: middleware.py
src/donor_reporting_portal/libs/: bas.py  impersonate.py
src/donor_reporting_portal/web/templates/: login.html
tests/: .coveragerc  api_checker.py  conftest.py  perms.py  test_commands.py  test_impersonate.py  test_permissions.py  test_signals.py  test_tasks.py  test_wsgi.py
tests/_api_checker/api_checker/: get_user.fixture.json
tests/_api_checker/tests.api_checker/: get_user.fixture.json
tests/admin/: test_metadata.py
tests/api/: test_config.py  test_graph_search.py  test_metadata.py  test_permissions.py  test_security.py  test_serializers.py  test_sharepoint.py  test_views_sharepoint.py
tests/api/_api_checker/test_metadata/: donor.fixture.json  external_grant.fixture.json  grant.fixture.json  metadata.fixture.json  theme.fixture.json
tests/api/_api_checker/test_security/: business_area.fixture.json  user.fixture.json  userrole.fixture.json
tests/api/_api_checker/test_sharepoint/: donor.fixture.json  group.fixture.json  library.fixture.json  site.fixture.json  tenant.fixture.json
tests/api/vcr_cassettes/: caml-list.yml  list.yml
tests/apps/: test_admin.py  test_backends.py  test_commands.py  test_imports.py  test_metadata.py  test_notifications.py  test_permissions.py  test_roles.py  test_roles_tasks.py  test_security.py  test_sharepoint.py  test_signals.py  test_synchronizers.py  test_tasks.py  test_wsgi.py
tests/apps/vcr_cassettes/: test_grant_sync.yml
tests/factories/: __init__.py  metadata.py  roles.py  sharepoint.py
tests/sharepoint/: test_camlquery_builder.py  test_client.py  test_querystring_builder.py
tests/sharepoint/_api_checker/tests.sharepoint.test_client/: library.fixture.json  site.fixture.json  tenant.fixture.json
tests/sharepoint/vcr_cassettes/: caml_items.yml  download.yml  file.yml  files.yml  folders.yml  items.yml
(+31 files in other folders)
