[project]
name = "donor-reporting-portal"
version = "3.0"
description = "Donor Reporting Portal"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "ddinicola" },
  { name = "Domenico DiNicola", email = "dom.dinicola@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "bleach[css]",
  "celery",
  "dj-database-url",
  "dj-static",
  "django",
  "django-adminactions",
  "django-anymail",
  "django-celery-beat",
  "django-celery-email",
  "django-celery-results",
  "django-cors-headers",
  "django-debug-toolbar",
  "django-environ",
  "django-extensions",
  "django-filter",
  "django-impersonate",
  "django-picklefield",
  "django-redis-cache",
  "django-rest-framework-social-oauth2",
  "djangorestframework",
  "djangorestframework-csv",
  "djangorestframework-recursive",
  "djangorestframework-simplejwt",
  "djangorestframework-xml",
  "gunicorn",
  "newrelic",
  "office365-rest-python-client",
  "psycopg2-binary",
  "requests",
  "sentry-sdk",
  "sharepoint-rest-api",
  "social-auth-app-django",
  "social-auth-core",
  "unicef-djangolib",
  "unicef-notification",
  "unicef-realm",
  "unicef-security",
  "unicef-vision",
  "uwsgi",
]

[dependency-groups]
dev = [
  "coverage",
  "django-regex",
  "django-webtest",
  "drf-api-checker",
  "factory-boy",
  "freezegun",
  "ipython",
  "mock",
  "pdbpp",
  "pre-commit",
  "pytest",
  "pytest-coverage",
  "pytest-django",
  "pytest-echo",
  "pytest-env",
  "pytest-ignore-flaky",
  "pytest-pythonpath",
  "responses",
  "ruff",
  "sphinx",
  "vcrpy",
  "webtest",
]
